[gd_scene load_steps=19 format=3 uid="uid://umxxocvujlih"]

[ext_resource type="Script" uid="uid://b7a7i470eclv8" path="res://scenes/game_scene/select_level/select_level.gd" id="1_la6f6"]
[ext_resource type="Texture2D" uid="uid://3k6a0d7sejjg" path="res://assets/ui_cut/door_finished.png" id="2_15idh"]
[ext_resource type="Texture2D" uid="uid://b4fm5nmdckh3y" path="res://assets/ui_cut/level2.png" id="2_bv7c4"]
[ext_resource type="Texture2D" uid="uid://ddtpodoxmsm3q" path="res://assets/ui_cut/level1.png" id="2_v5gfa"]
[ext_resource type="Texture2D" uid="uid://c4m7qjp8epygy" path="res://assets/ui_cut/door_normal.png" id="3_p1cwx"]
[ext_resource type="Texture2D" uid="uid://clc0qiuuou4fg" path="res://assets/ui_cut/level3.png" id="3_v5gfa"]
[ext_resource type="Texture2D" uid="uid://b5et5thuinqt8" path="res://assets/ui_cut/level4.png" id="4_k0alc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bscb1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bv7c4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v5gfa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0alc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exe35"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2dwn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bv7c4"]
texture = ExtResource("2_15idh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tu867"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0atba"]
texture = ExtResource("2_15idh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_of733"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r13gc"]
texture = ExtResource("3_p1cwx")

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_la6f6")
back_path = "uid://dboeh8i18e2sh"
level_path = "uid://d30t2bi4w65jl"

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Levels" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -301.0
offset_right = 520.0
offset_bottom = 739.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
pivot_offset = Vector2(520, 520)

[node name="Level1" type="TextureRect" parent="Levels"]
custom_minimum_size = Vector2(520, 520)
offset_right = 520.0
offset_bottom = 520.0
texture = ExtResource("2_v5gfa")

[node name="Level2" type="TextureRect" parent="Levels"]
custom_minimum_size = Vector2(520, 520)
layout_mode = 0
offset_left = 1040.0
offset_right = 1560.0
offset_bottom = 520.0
rotation = 1.5708
texture = ExtResource("2_bv7c4")

[node name="Level3" type="TextureRect" parent="Levels"]
custom_minimum_size = Vector2(520, 520)
layout_mode = 0
offset_left = 1040.0
offset_top = 1040.0
offset_right = 1560.0
offset_bottom = 1560.0
rotation = 3.14159
texture = ExtResource("3_v5gfa")

[node name="Level4" type="TextureRect" parent="Levels"]
custom_minimum_size = Vector2(520, 520)
layout_mode = 0
offset_top = 1040.0
offset_right = 520.0
offset_bottom = 1560.0
rotation = -1.5708
texture = ExtResource("4_k0alc")

[node name="EnterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="Control" type="Control" parent="EnterMarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="EnterGame" type="Button" parent="EnterMarginContainer/Control"]
custom_minimum_size = Vector2(277, 467)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.5
offset_top = -467.0
offset_right = 138.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_bscb1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_bv7c4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v5gfa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_k0alc")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_exe35")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_j2dwn")
theme_override_styles/hover = SubResource("StyleBoxTexture_bv7c4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_tu867")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0atba")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_of733")
theme_override_styles/normal = SubResource("StyleBoxTexture_r13gc")

[node name="SwitchLevelMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="SwitchLevelMarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Last" type="Button" parent="SwitchLevelMarginContainer/Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 81.0
offset_top = 394.0
offset_right = 161.0
offset_bottom = 474.0
text = "上一个"

[node name="Next" type="Button" parent="SwitchLevelMarginContainer/Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 1084.0
offset_top = 398.0
offset_right = 1164.0
offset_bottom = 478.0
text = "下一个"

[node name="KeyMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="KeyMarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Back" type="Button" parent="KeyMarginContainer/Control"]
layout_mode = 1
offset_right = 100.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 20
text = "返回"

[node name="Guide" type="Button" parent="KeyMarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "指导"
